# swagger/swagger.yaml
@@ -12,6 +12,12 @@ definitions:
         description: APIKeySecret is a generated secret, aka, the key.
         type: string
         x-go-name: APIKeySecret
+      create_at:
+        description: CreateAt defines when this key was created.
+        example: time.Now()
+        format: date-time
+        type: string
+        x-go-name: CreateAt
       id:
         description: ID of the key. This is auto-generated.
         format: int64
@@ -22,9 +28,8 @@ definitions:
         type: string
         x-go-name: Name
       ttl:
-        description: TTL defines how long this key can live.
-        example: time.Now().Add(10 * time.Minute)
-        format: date-time
+        description: TTL defines how long this key can live in duration.
+        example: 1h10m10s
         type: string
         x-go-name: TTL
       user_id:
@@ -39,6 +44,7 @@ definitions:
     - api_key_id
     - api_key_secret
     - ttl
+    - create_at
     title: APIKey is an api key pair generated by the user to access the api without
       the frontend.
     type: object
@@ -299,47 +305,6 @@ definitions:
     title: ListOptions provides options for List operations with additional filters.
     type: object
     x-go-package: github.com/krok-o/krok/pkg/models
-  NewUser:
-    description: |-
-      NewUser is a new user in the Krok system. Specifically this exposes the token and should only be used when creating
-      a user for the first time.
-    properties:
-      api_keys:
-        description: APIKeys contains generated api access keys for this user.
-        items:
-          $ref: '#/definitions/APIKey'
-        type: array
-        x-go-name: APIKeys
-      display_name:
-        description: DisplayName is the name of the user.
-        type: string
-        x-go-name: DisplayName
-      email:
-        description: Email of the user.
-        type: string
-        x-go-name: Email
-      id:
-        description: ID of the user. This is auto-generated.
-        format: int64
-        type: integer
-        x-go-name: ID
-      last_login:
-        description: LastLogin contains the timestamp of the last successful login
-          of this user.
-        format: date-time
-        type: string
-        x-go-name: LastLogin
-      token:
-        description: Token is displayed once for new users. Then never again.
-        type: string
-        x-go-name: Token
-    required:
-    - email
-    - id
-    - last_login
-    - token
-    type: object
-    x-go-package: github.com/krok-o/krok/pkg/models
   Platform:
     properties:
       id:
@@ -579,10 +544,11 @@ paths:
       operationId: deleteCommand
       parameters:
       - description: The ID of the command to delete
+        format: int
         in: path
         name: id
         required: true
-        type: string
+        type: integer
       responses:
         "200":
           description: OK in case the deletion was successful
@@ -594,10 +560,11 @@ paths:
     get:
       operationId: getCommand
       parameters:
-      - in: path
+      - format: int
+        in: path
         name: id
         required: true
-        type: string
+        type: integer
       produces:
       - application/json
       responses:
@@ -610,6 +577,182 @@ paths:
         "500":
           description: failed to get user context
       summary: Returns a specific command.
+  /command/{id}/settings:
+    post:
+      operationId: listCommandSettings
+      parameters:
+      - description: The ID of the command to list settings for
+        format: int
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+          schema:
+            items:
+              $ref: '#/definitions/CommandSetting'
+            type: array
+        "500":
+          description: failed to list settings
+      summary: List settings for a command.
+  /command/add-command-rel-for-platform/{cmdid}/{repoid}:
+    post:
+      operationId: addCommandRelForPlatformCommand
+      parameters:
+      - format: int
+        in: path
+        name: cmdid
+        required: true
+        type: integer
+      - format: int
+        in: path
+        name: repoid
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: successfully added relationship
+        "400":
+          description: invalid ids or platform not found
+        "500":
+          description: failed to add command relationship to platform
+      summary: Adds a connection to a platform for a command. Defines what platform
+        a command supports. These commands will only be able to run for those platforms.
+  /command/add-command-rel-for-repository/{cmdid}/{repoid}:
+    post:
+      operationId: addCommandRelForRepositoryCommand
+      parameters:
+      - format: int
+        in: path
+        name: cmdid
+        required: true
+        type: integer
+      - format: int
+        in: path
+        name: repoid
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: successfully added relationship
+        "400":
+          description: invalid ids or repositroy not found
+        "500":
+          description: failed to add relationship
+      summary: Add a connection to a repository. This will make this command to be
+        executed for events for that repository.
+  /command/remove-command-rel-for-platform/{cmdid}/{repoid}:
+    post:
+      operationId: removeCommandRelForPlatformCommand
+      parameters:
+      - format: int
+        in: path
+        name: cmdid
+        required: true
+        type: integer
+      - format: int
+        in: path
+        name: repoid
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: successfully removed relationship
+        "400":
+          description: invalid ids or platform not found
+        "500":
+          description: failed to add relationship
+      summary: Remove a relationship to a platform. This command will no longer be
+        running for that platform events.
+  /command/remove-command-rel-for-repository/{cmdid}/{repoid}:
+    post:
+      operationId: removeCommandRelForRepositoryCommand
+      parameters:
+      - format: int
+        in: path
+        name: cmdid
+        required: true
+        type: integer
+      - format: int
+        in: path
+        name: repoid
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: successfully removed relationship
+        "400":
+          description: invalid ids or repositroy not found
+        "500":
+          description: failed to add relationship
+      summary: Remove a relationship to a repository. This command will no longer
+        be running for that repository events.
+  /command/run/{id}:
+    get:
+      operationId: getCommandRun
+      parameters:
+      - format: int
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/CommandRun'
+        "400":
+          description: invalid command id
+        "404":
+          description: command run not found
+        "500":
+          description: failed to get command run
+      summary: Returns details about a command run.
+  /command/settings/{id}:
+    delete:
+      operationId: deleteCommandSetting
+      parameters:
+      - description: The ID of the command setting to delete
+        format: int
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK in case the deletion was successful
+        "400":
+          description: invalid id
+        "500":
+          description: when the deletion operation failed
+      summary: Deletes a given command setting.
+  /command/update:
+    post:
+      operationId: updateCommand
+      parameters:
+      - in: body
+        name: command
+        required: true
+        schema:
+          $ref: '#/definitions/Command'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successfully updated command
+          schema:
+            $ref: '#/definitions/Command'
+        "400":
+          description: binding error
+        "500":
+          description: failed to update the command
+      summary: Updates a given command.
   /commands:
     post:
       description: List commands
@@ -640,7 +783,7 @@ paths:
         "200":
           description: the generated JWT token
           schema:
-            $ref: '#/responses/tokenResponse'
+            $ref: '#/responses/TokenResponse'
         "500":
           description: when there was a problem with matching the email, or the api
             key or generating the token
@@ -650,15 +793,17 @@ paths:
       operationId: hookHandler
       parameters:
       - description: The ID of the repository.
+        format: int
         in: path
         name: rid
         required: true
-        type: string
+        type: integer
       - description: The ID of the provider.
+        format: int
         in: path
         name: vid
         required: true
-        type: string
+        type: integer
       produces:
       - application/json
       responses:
@@ -702,10 +847,11 @@ paths:
       operationId: getApiKeys
       parameters:
       - description: The ID of the key to return
+        format: int
         in: path
         name: keyid
         required: true
-        type: string
+        type: integer
       produces:
       - application/json
       responses:
@@ -721,10 +867,11 @@ paths:
       operationId: deleteApiKey
       parameters:
       - description: The ID of the key to delete
+        format: int
         in: path
         name: keyid
         required: true
-        type: string
+        type: integer
       responses:
         "200":
           description: OK in case the deletion was successful
@@ -757,8 +904,8 @@ paths:
 produces:
 - application/json
 responses:
-  tokenResponse:
-    description: tokenResponse contains the generated JWT token.
+  TokenResponse:
+    description: TokenResponse contains the generated JWT token.
 schemes:
 - http
 swagger: "2.0"
